--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "axios": "^1.7.9",
+    "mongoose": "^8.9.1",
     "next": "15.0.3",
     "next-auth": "^4.24.10",
     "react": "^18.3.1",
